# ambient-weather-collector

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  docker-compose.portainer.yml  docker-compose.yml
.github/workflows/: deploy.yml
.sqlx/: query-df5ad07da2b131cdca10a342da4b8074acffce096707e6b4d8ecfdc8753e88c1.json
docker/grafana/dashboards/: Weather.json
docker/postgres/: postgresql.conf
docker/postgres/migrations/: init.sql
migrations/: 20240429155325_init.up.sql
src/: ambient_api.rs  error.rs  main.rs  timescale.rs
src/ambient_api/: device.rs  device_data.rs  ws.rs
